<resources>
    <string name="app_name">Arthros Patient App</string>

    <string name="check_internet">Please check internet connection</string>
    <string name="please_wait">Please wait loading....</string>


    <string name="log_in"> Log In</string>
    <string name="login">LogIn</string>

    <string name="current_password">Current Password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="phone_number">Phone Number</string>
    <string name="already_did_this">Already did this ?</string>

    <string name="new_to_this_experience">New to this Experience</string>

    <string name="or_with">OR WITH</string>


    <array name="menuOptions">
        <item>Home</item>
        <item>Personal</item>
        <item>High scores</item>
        <item>Settings</item>
        <item>About</item>
    </array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="doctors">Doctors</string>
    <string name="appointments">Appointments</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Logout</string>
    <string name="verify_and_proceed">Verify And Proceed</string>
    <string name="resend">Resend</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="we_have_sent_you_a_verification_code_otp">We have sent you a verification Code (OTP)</string>
    <string name="our_specialties">Our Specialties</string>
    <string name="our_services">Our Services</string>
    <string name="view_all"><u>View All</u></string>
    <string name="no_data_available">No Data Available</string>
    <string name="about">About</string>
    <string name="book">Book</string>
    <string name="chat">Chat</string>
    <string name="add_review">Add Review</string>
    <string name="services">Services</string>
    <string name="read_more">Read More</string>
    <string name="rating_amp_reviews"><![CDATA[Rating & Reviews]]></string>
    <string name="book_appointment">Book Appointment</string>
    <string name="write_your_review_here">Write your review here...</string>
    <string name="submit">Submit</string>
    <string name="rating_msg">Please give rating</string>
    <string name="schedules">Schedules</string>
    <string name="dates">Dates</string>
    <string name="time_slots">Time Slots</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="save">Save</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Select Gender</string>
    <string name="app_settings">App Settings</string>
    <string name="support">Support</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policies">Privacy Policies</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="messages">Messages</string>


    <string name="ongoing">Ongoing</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="reschedule">ReSchedule</string>

    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_sub_title">Please enter your Email, you will receive an OTP on your registered phone number via SMS to reset your password.</string>
    <string name="email_id">Email Id</string>
    <string name="send">Send</string>

    <string name="error_email_address">Please enter the email address.</string>
    <string name="error_email_validation">Please enter valid email address.</string>
    <string name="error_mobile_validation">Please enter mobile No.</string>

    <string name="error_current_password">Please enter the current password.</string>
    <string name="error_current_password_6_digit">Current password can not be less than 6 digit.</string>
    <string name="error_confirm_password_6_digit">Confirm Password can not be less than 6 digit.</string>
    <string name="error_password">Please enter the password.</string>
    <string name="error_confirm_password">Please enter the confirm password.</string>
    <string name="error_6_digit">Password can not be less than 6 digit.</string>

    <string name="error_matches_password">Password do not matches.</string>

    <string name="settings_file_name">com.app.sample.fchat.temp</string>

    <string name="verification_code">We have sent you a verification code (OTP)\nto</string>
    <string name="resend_code">Resend Code</string>
    <string name="not_receive_otp">didn\'t receive the otp?</string>
    <string name="verify_otp">Verify Otp</string>

    <string name="please_enter_otp">Please enter otp.</string>
    <string name="otp_sent_successfully">Otp Sent Successfully</string>
    <string name="successfully_change_password">Successfully reset password ,please login </string>
    <string name="change_password_title">Please enter new password to reset your password</string>

    <string name="reset_password">Reset Password</string>

    <string name="error_offer_status">Offer already in process, Please wait for buyer reply.</string>
    <string name="error_could_not_connect">Could not connect</string>
    <string name="type_here">Type here...</string>


    <string name="doctor_details">Doctor Details</string>
    <string name="education_qualification">Education / Qualification</string>
    <string name="total_experience">Total Experience</string>
    <string name="describe_here">Describe here...</string>
    <string name="schedule_calendar">Schedule calendar</string>
    <string name="rate_review"><![CDATA[Rate & Review]]></string>
    <string name="chats">Chats</string>
    <string name="my_doctors">My Doctors</string>
    <string name="didn_t_receive_otp">Did not receive OTP?</string>
    <string name="reset_password_subtitle">Please enter new password to reset your password.</string>
    <string name="agree_to_our">agree to our</string>
    <string name="call">Call</string>
    <string name="reports">Reports</string>
    <string name="experience">Experience</string>
    <string name="specialization">Specialization</string>
    <string name="next">Next</string>
    <string name="appointment_details">Appointment Details:</string>
    <string name="booking_for_other">Booking for other</string>
    <string name="confirm">Confirm</string>
    <string name="thank_you">Thank You !!</string>
    <string name="done">Done</string>
    <string name="select_height">Select Height</string>
    <string name="select_blood_group">Select Blood Group</string>
    <string name="cancel">Cancel</string>
    <string name="select_gender">Select Gender</string>


</resources>